# No-Three-in-Line-Game

./: .dockerignore  .gitignore  Makefile  pyproject.toml  sonar-project.properties  start.sh
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: build.yml
.sonarlint/: connectedMode.json
backend/: .editorconfig  Makefile  README.md  cov.xml  pyproject.toml  sonar-project.properties
backend/docs/: convex_tester.ipynb
backend/src/game/: app.py  puzzles.json
backend/src/game/convex/: grid.py
backend/src/game/mecanics/: rules.py
backend/src/game/players/: heuristics.py  player.py
backend/tests/module/: test_main.py
backend/tests/unit/convex/: test_grid.py
backend/tests/unit/mecanis/: test_rules.py
backend/tests/unit/players/: test_heuristics.py
docs/: convex_tester.ipynb
frontend/: .prettierrc  angular.json  package-lock.json  package.json  tslint.json
frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/pages/game/: game.component.css  game.component.html  game.component.ts
frontend/src/app/pages/game-lobby/: game-lobby.component.html  game-lobby.component.spec.ts  game-lobby.component.ts
frontend/src/app/pages/home/: home.component.css  home.component.html  home.component.ts
frontend/src/app/pages/puzzles/: puzzles.component.css  puzzles.component.html  puzzles.component.ts
frontend/src/app/services/: game.service.ts  local.service.ts  socket.service.ts
frontend/src/environment/: environment.ts
src/game/cmd/: main.py
src/game/convex/: grid.py
src/game/convexe/: grid.py
src/game/mecanics/: heuristics.py  rules.py
src/game/players/: heuristics.py  player.py
testing/: .gitignore  decode.c  input  test.py
tests/module/: test_main.py
tests/unit/: test_main.py
tests/unit/convex/: test_grid.py
tests/unit/mecanis/: test_heuristics.py  test_rules.py
tests/unit/players/: test_heuristics.py
